lifeguard-derive/tests/ui/compile_error_partial_model_trailing_colons.stderr
error: Entity path has trailing colons. Found empty segment at end in #[lifeguard(entity = "UserEntity::")]. Use a valid path like "foo::Entity" or "Entity".
 --> tests/ui/compile_error_partial_model_trailing_colons.rs:6:1
  |
6 | #[derive(DerivePartialModel)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
